--- a/main.css
+++ b/main.css
@@ -2,10 +2,16 @@
 
 body {
     background: rgb(155, 12, 12);
-}
+    font-family: 'Lobster Two', cursive;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 
 #content {
   background: lime;
   margin: 0;
   padding: 0;
+}
+header {
+  text-align: center;
 }
